--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,8 @@ services:
     volumes:
       - .:/app
       - dependencies:/usr/local/deps
+    env_file:
+      - .env
     depends_on:
       postgres:
         condition: service_healthy
